Updating to 5be27d9a84d9e00868a6755120f48aff8f2dcdb5.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,16 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_6__1872013'>Session 6 - 18/7/2013</h3>
+
+<ul>
+<li><a href='/ruby4'>Intro to Ruby 4</a></li>
+
+<li><a href='/lp2'>Landing Page 2</a></li>
+
+<li><a href='/hmwk6'>Homework 6</a></li>
+</ul>
+
 <h3 id='session_5__1672013'>Session 5 - 16/7/2013</h3>
 
 <ul>
