Updating to 5be27d9a84d9e00868a6755120f48aff8f2dcdb5.

--- a/hmwk3/index.html
+++ b/hmwk3/index.html
@@ -112,7 +112,7 @@
 
 <li><a href='http://tryruby.org'>Try Ruby</a>: you had a look at this last homework. You&#8217;re welcome to carry on through it.</li>
 
-<li><a href='http://it-ebooks.info/book/59/'>Progamming Ruby 1.9</a>: <em>the</em> Ruby 1.9 manual. Available for <strong>free download</strong> - get it quick. Probably a bit complicated as you&#8217;re starting out, but will be invaluable later in the course.</li>
+<li><a href='http://www.ruby-doc.org/docs/ProgrammingRuby/'>Progamming Ruby 1.9</a>: <em>the</em> Ruby manual. Available <strong>free online</strong>. Probably a bit complicated as you&#8217;re starting out, but will be invaluable later in the course.</li>
 </ul>
 	</div>
 
