--- a/plan.html
+++ b/plan.html
@@ -86,9 +86,9 @@
 </tr></tbody></table></div><table><thead><tr><th>Week</th><th>Content</th></tr></thead><tbody><tr><td style='text-align: left;'>1</td><td style='text-align: left;'>HTML, CSS, git add, git commit, buy domain name, gh pages</td>
 </tr><tr><td style='text-align: left;'>2</td><td style='text-align: left;'>twitter bootstrap, git push/pull/conflict (cheatsheet), ruby intro, ruby methods</td>
 </tr><tr><td style='text-align: left;'>3</td><td style='text-align: left;'>ruby arrays/hashes, start joint project, forms</td>
-</tr><tr><td style='text-align: left;'>4</td><td style='text-align: left;'>git branching, analytics, ruby up to classes</td>
-</tr><tr><td style='text-align: left;'>5</td><td style='text-align: left;'>databases, rubygems, bootstrap js, js in console</td>
-</tr><tr><td style='text-align: left;'>6</td><td style='text-align: left;'>sinatra, own js, mobile app, RESTful services, HTTP verbs</td>
+</tr><tr><td style='text-align: left;'>4</td><td style='text-align: left;'>forms, git branching, google analytics, sinatra</td>
+</tr><tr><td style='text-align: left;'>5</td><td style='text-align: left;'>AB testing, more sinatra, classes, database structure??</td>
+</tr><tr><td style='text-align: left;'>6</td><td style='text-align: left;'>databases, activerecord</td>
 </tr><tr><td style='text-align: left;'>7</td><td style='text-align: left;'>rails</td>
 </tr><tr><td style='text-align: left;'>8</td><td style='text-align: left;'>own project + more rails</td>
 </tr><tr><td style='text-align: left;'>9</td>
